<resources>
    <string name="app_name">CleanUp</string>
    <string name="nav_home">Home</string>
    <string name="nav_zone">Zone</string>
    <string name="nav_article">Article</string>
    <string name="nav_about">About</string>

    <string name="detail_report_judul">Detail Report</string>
    <string name="judul_report">%s (%s, %s)</string>

    <string name="detail_article_title">Detail Article</string>

    <string name="article_title_tv">Title</string>
    <string name="article_desc_tv">Description</string>


    <string name="report_title_tv">Title</string>
    <string name="report_desc_tv">Description</string>
    <string name="report_loc_tv">Location</string>

    <string name="description_report">Description</string>
    <string name="detail_report">Detail Report</string>

    <string name="cleanup">CleanUp</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password\n</string>
    <string name="login_btn">Login</string>
    <string name="login_tv">Login</string>

    <string name="register_tv">Register</string>
    <string name="register_btn">Register</string>


    <string name="re_enter_password">Re-enter Password</string>

    <string name="name_reg">Name</string>
    <string name="profile_name">Name</string>

    <string name="about_btn">About</string>
    <string name="logout_btn">Logout</string>
    <string name="continue_btn">Continue</string>
    <string name="submit_btn">Submit</string>

    <string name="title_home">Home</string>
    <string name="title_article">Article</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="title_post_report">Post Report</string>
    <string name="title_desc_report">Report Description</string>

    <string name="latest_report">Latest Report</string>
    <string name="latest_article">Latest Article</string>

    <string name="check_latest_report">Check latest report</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="empty_image">No media selected</string>

    <string name="your_web_client_id">855867696349-0pg97m2dfriaar51n9b6toac49sa1ub1.apps.googleusercontent.com</string>
    <string name="email_error">Incorrect email format</string>
    <string name="password_error">Password should be more than 8</string>
    <string name="or_sign_in_with">or signin with</string>
    <string name="already_have">Already have account?\n</string>

    <string name="title_article_item">Article name</string>
    <string name="article_source">Source</string>
    <string name="tflitevision_is_not_initialized_yet">fLiteVision is not initialized yet</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="result_empty">Image classifier have no result</string>

    <string name="title_post_classification">Classification AI</string>
    <string name="classify_desc">Put your image here and our AI will classify it\'s type</string>
    <string name="nav_classification">Classify</string>
    <string name="title_result_classification">Classification Result</string>
    <string name="classify_result">Result: %s</string>
    <string name="title_report_item">Title</string>
    <string name="reporter_name">Name</string>
    <string name="report_time">%s, %s</string>
    <string name="report_comment">Comment</string>
    <string name="ed_comment_hint">Type a comment ...</string>

    <string name="manage_organic_waste">Managing Organic Waste\n
1. Waste Segregation: Separate organic waste from inorganic waste.\n
2. Composting: Turn organic waste into compost to use as fertilizer.\n
3. Liquid Fertilizer: Ferment vegetable and fruit scraps to make liquid fertilizer.\n
4. Biogas: Use organic waste to produce biogas for energy.\n</string>

    <string name="manage_inorganic_waste">Managing Inorganic Waste\n
1. Waste Segregation: Separate inorganic waste by type (plastic, paper, glass, metal).\n
2. Recycling: Send recyclable inorganic waste to recycling centers.\n
3. Reducing Usage: Reduce the use of single-use items and choose reusable products.\n
4. Creative Reuse: Repurpose inorganic waste for crafts or creative projects.\n
5. Safe Disposal: Dispose of non-recyclable inorganic waste properly.</string>

    <string name="dev">Made by:\n
    1. Laode Yunus Abdillah Sandi (ML)\n
    2. Jonathan Ardi Putranto (ML)\n
    3. Dewi Titania Randa (ML)\n
    4. Alif Fathur Rahman (CC)\n
    5. Teuku Ardhi Firmansyah Al Ghozali (CC)\n
    6. Bunaya Isnikhan (MD)\n
    7. Steven Nataniel Haryanto (MD)\n</string>

</resources>